--- a/templates/home.html
+++ b/templates/home.html
@@ -227,7 +227,7 @@
         <h3 class="step-title">1. Join the Queue</h3>
       </div>
       <p class="step-description">
-        Use the <code>/queue</code> command in your Discord server to join the 6 gents queue.
+        Use the <code>/queue</code> command in your Discord server to join the Six Gents queue.
         Once 6 players have joined, a match will be created.
       </p>
     </div>
@@ -309,7 +309,7 @@
     <tbody>
       <tr>
         <td><span class="command-name">/queue</span></td>
-        <td class="command-description">Join the 6 gents queue</td>
+        <td class="command-description">Join the Six Gents queue</td>
       </tr>
       <tr>
         <td><span class="command-name">/leave</span></td>
