--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Rocket League 6 Gents{% endblock %}</title>
+    <title>{% block title %}Rocket League Six Gents{% endblock %}</title>
 
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
 
