Admin portal for website

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Admin Dashboard - SixGents 6-Mans{% endblock %}
+{% block title %}Admin Dashboard - SixGents{% endblock %}
 
 {% block content %}
 <div class="container">
